# bp-python

./: .dockerignore  .env.dev  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker.make  exclude.lst  hpc.init  hpc.make  py.make  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: container.yml  main.yml
scripts/: generate_mock_data.sh  init
src/: args.py  sample.py  test_app.py  util.py
