# https://peps.python.org/pep-0621/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=42"]
# requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "template"
description = "My package description"
readme = "README.rst"
keywords = ["Boilerplate", "Template"]
license = {text = "BSD 3-Clause License"}
authors = ["Mohsen Hariri <mhariri68@gmail.com>"]
# classifiers = [
#     "Framework :: Django",
#     "Programming Language :: Python :: 3",
# ]
# dependencies = [
#     "requests",
#     'importlib-metadata; python_version<"3.8"',
# ]
dynamic = ["version"]

[tool.isort]
profile = "black"